--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -4,26 +4,26 @@
   display: flex;
   width: 100%;
   height: 5rem;
-  background-color: #ecb55d;
+  background-color: rgb(236, 181, 93);
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   font-family: "Roboto", sans-serif;
+  padding: 2rem;
 }
 
 .logo {
-  padding: 1rem 3rem;
   cursor: pointer;
-  margin-left: 3rem;
   color: #2984a5;
+  width: auto;
 }
 .logo:active {
-  color: white;
-  box-shadow: 0 0 5px -1px rgba(0.2, 0.2, 0.2, 0.8);
+  background-color: white;
+  user-select: none;
 }
 
-.user {
-  padding: 1rem 3rem;
+.logo:hover {
+  color: rgba(255, 255, 255, 1);
 }
 
 .avatar {
@@ -59,4 +59,8 @@
   color: #2984a5;
   font-size: 100;
   font-weight: bold;
+}
+
+.username:hover {
+  color: rgba(255, 255, 255, 1);
 }
